[package]
name = "snowflake-id"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
sqlx = { version="0.8.6", optional = true}
tokio = { version = "1", features = ["sync", "rt", "time"], optional = true }

[features]
sqlx = ["dep:sqlx"]
tokio = ["dep:tokio"]

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
